[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "clepadellec",email = "clepadellec@crossdata.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
